# ros_bard

./: CMakeLists.txt  README.md  package.xml
config/: tree_layout.ui
data/: test.json
data/2023-12-28_13:52:52.593381/: 2023-12-28_13:52:52.659660.bv  2023-12-28_13:52:56.792700.bv
data/2023-12-28_13:53:21.487343/: 2023-12-28_13:53:21.549300.bv  2023-12-28_13:53:35.806210.bv  2023-12-28_13:53:38.896597.bv  2023-12-28_13:53:48.187994.bv  2023-12-28_13:53:57.329709.bv
data/json_files/: 20240210101900.json  20240210102018.json  20240210102505.json  20240210102622.json  20240505154744.json
ros_bard/: DataFormatter.py  LocalDataInterface.py  LocalUIInterface.py
scripts/: cli_approach.py  cli_approach_ros1.py  deepdiff_test.py  graphviz_test.cpp  graphviz_test.py  node_graph_test.py  rclpy_test.py  rmw_test.cpp  ui_table.py  ui_test.py
scripts/test_scripts/: data_formatter_test.py
